--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ REACT/React-perso/_projet-final/
 REACT/React-cda/exo_form/
 REACT/React-perso/finalProjet/
 REACT/React-cda/git/
+REACT/React-cda/agence3/
